force-app/main/default/objects/Costo_Solicitud_Pickup__c/fields/Costo__c.field-meta.xml
<CustomField>
    <fullName>Costo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costo</label>
    <referenceTo>Costo__c</referenceTo>
    <relationshipLabel>Costos Importaciones Agente</relationshipLabel>
    <relationshipName>Costos_Importaciones_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>