force-app/main/default/objects/Costo_Solicitud_Pickup__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de Facturar</fullName>
                <default>true</default>
                <label>Pendiente de Facturar</label>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>