force-app/main/default/objects/Costo_Solicitud_Pickup__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipName>Costos_Solicitudes_Pickup</relationshipName>
    <type>Lookup</type>
</CustomField>